--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root {
-  --primary: #801717; /* Rojo profundo */
-  --secondary: #000000; /* Negro */
-  --muted: #6b7280; /* Gris medio para detalles */
-  --card: #fdf6f0; /* Fondo de tarjetas */
-  --bg: #000000; /* Fondo de la página */
+  --primary: #801717; 
+  --secondary: #000000; 
+  --muted: #6b7280; 
+  --card: #fdf6f0; 
+  --bg: #000000; 
 }
 
 * {
@@ -14,19 +14,17 @@ body {
   font-family: Inter, 'Times New Roman', Times, serif, sans-serif;
   margin: 0;
   background: var(--bg);
-  color: #111827;
+  color: #111827; 
 }
-
 #catalogo-titulo {
-  color: #ffffff;
+  color: #ffffff; 
 }
-
 header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 1rem 2rem;
-  background: #6b0101;
+  background: #6b0101; 
   box-shadow: 0 2px 6px rgba(255, 255, 255, 0.1);
   color: #ffffff;
 }
@@ -51,7 +49,7 @@ h1 {
 }
 
 .btn.rojo {
-  background: #000000;
+  background: #000000; /* Rojo coral no chillón */
 }
 
 main {
@@ -188,6 +186,7 @@ main {
   border-radius: 8px;
   border: 1px solid #ddd;
 }
+
 
 @media (max-width: 900px) {
   main {
